right clipping fixed

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -6,7 +6,7 @@
 .container {
   padding: 0 0rem;
   background-color: rgb(242, 242, 240);
-  
+  overflow: hidden;
 }
 
 .topContainer{
